feat(test): add IdempotencyConcurrencyIT for Sprint 16